--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "postuninstall": "electron-builder install-app-deps"
   },
   "dependencies": {
+    "@capacitor-community/bluetooth-le": "^7.1.0",
     "@quasar/extras": "^1.0.0",
     "core-js": "^3.8.3",
     "quasar": "^2.0.0",
